--- a/style.css
+++ b/style.css
@@ -23,3 +23,24 @@
      left: 20px;
      color: wheat;
  }
+ .top {
+    height: 40vh;
+    width: 20vw;
+    background-color: red;
+    margin: 50px auto;
+    position: relative;
+ }
+ .top h1 {
+    font-size: 1.5rem;
+    color: cyan;
+     position: relative;
+     top: 20px;
+     left: 20px;
+ }
+ .top p {
+    font-size: 1.2rem;
+    position: relative;
+    top: 30px;
+    left: 20px;
+    color: wheat;
+ }
